DRT-4567 Fix & refactor - Fixed broken layout on staffing page - reinstated splits graph - improved pax graph colours

--- a/server/src/main/assets/stylesheets/main.less
+++ b/server/src/main/assets/stylesheets/main.less
@@ -417,12 +417,12 @@ th h2 {
 }
 
 .pax-portfeed {
-  background-color: #ffccaa;
+  background-color: #ffeeaa;
   .pax-bar
 }
 
 .pax-maxpax {
-  background-color: #ffaaaa;
+  background-color: #ff9999;
   .pax-bar
 }
 
